2010-02-23  Mike Krüger  <mkrueger@novell.com>

	* Styles/OblivionStyle.xml: changed oblivion color.

2010-02-22  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* Mono.TextEditor.csproj:
	* Mono.TextEditor.Theatrics/AnimatedBox.cs:
	* Mono.TextEditor.Theatrics/AnimatedVBox.cs:
	* Mono.TextEditor.Theatrics/AnimatedWidget.cs: Added animated
	  box.

2010-02-22  Mike Krüger  <mkrueger@novell.com>

	* Styles/OblivionStyle.xml: changed main search result color
	  in oblivion.

2010-02-22  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs: Added helper function.

2010-02-19  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Worked on search &
	  replace.

2010-02-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: fix caret problem.

2010-02-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Only request caret blink on
	  caret move when the text editor has the focus.

2010-02-18  Mike Krüger  <mkrueger@novell.com>

	* Styles/TangoLightStyle.xml:
	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/TextEditorData.cs:
	* Mono.TextEditor.Highlighting/Style.cs: Worked on search &
	  replace.

2010-02-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/SyntaxMode.cs: fixed null ref.

2010-02-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/SyntaxMode.cs: fixed possible
	  null reference.

2010-02-18  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/TextEditor.cs: Remove debug code.

2010-02-18  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/TextEditor.cs: Enable pixbuf animation
	  scaling on Mac since it seem to work now the drawable is a
	  pixmap.

2010-02-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: worked on search result
	  animation.

2010-02-18  Michael Hutchinson  <mhutchinson@novell.com>
